force-app/main/default/objects/GenerationDetailsDataSets__x/GenerationDetailsDataSets__x.object-meta.xml
<CustomObject>
    <description>GenerationDetailsDataSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>GenerationDetailsDataSets</externalName>
    <label>GenerationDetailsDataSets</label>
    <pluralLabel>GenerationDetailsDataSets</pluralLabel>
</CustomObject>