force-app/main/default/objects/GenerationDetailsDataSets__x/fields/AttrName__c.field-meta.xml
<CustomField>
    <fullName>AttrName__c</fullName>
    <description>AttrName</description>
    <externalDeveloperName>AttrName</externalDeveloperName>
    <label>AttrName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>