force-app/main/default/objects/GenerationDetailsDataSets__x/fields/AttrValue__c.field-meta.xml
<CustomField>
    <fullName>AttrValue__c</fullName>
    <description>AttrValue</description>
    <externalDeveloperName>AttrValue</externalDeveloperName>
    <label>AttrValue</label>
    <length>128</length>
    <type>Text</type>
</CustomField>