force-app/main/default/objects/GenerationDetailsDataSets__x/fields/Nmi__c.field-meta.xml
<CustomField>
    <fullName>Nmi__c</fullName>
    <description>Nmi</description>
    <externalDeveloperName>Nmi</externalDeveloperName>
    <label>Nmi</label>
    <length>128</length>
    <type>Text</type>
</CustomField>